05-creating-and-scheduling-data-pipelines/logs/dag_id=etl/run_id=manual__2024-04-22T10:05:21.054197+00:00/task_id=create_table/attempt=1.log
[2024-04-22T10:05:23.776+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-04-22T10:05:23.797+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl.create_table manual__2024-04-22T10:05:21.054197+00:00 [queued]>
[2024-04-22T10:05:23.803+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl.create_table manual__2024-04-22T10:05:21.054197+00:00 [queued]>
[2024-04-22T10:05:23.803+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 1
[2024-04-22T10:05:23.818+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): create_table> on 2024-04-22 10:05:21.054197+00:00
[2024-04-22T10:05:23.827+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl', 'create_table', 'manual__2024-04-22T10:05:21.054197+00:00', '--job-id', '21', '--raw', '--subdir', 'DAGS_FOLDER/etl.py', '--cfg-path', '/tmp/tmp4e812elj']
[2024-04-22T10:05:23.829+0000] {standard_task_runner.py:91} INFO - Job 21: Subtask create_table
[2024-04-22T10:05:23.831+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=16486) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-04-22T10:05:23.832+0000] {standard_task_runner.py:63} INFO - Started process 16513 to run task
[2024-04-22T10:05:23.868+0000] {task_command.py:426} INFO - Running <TaskInstance: etl.create_table manual__2024-04-22T10:05:21.054197+00:00 [running]> on host b6fcd665afc9
[2024-04-22T10:05:23.941+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-04-22T10:05:21.054197+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-04-22T10:05:21.054197+00:00'
[2024-04-22T10:05:23.943+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-04-22T10:05:23.949+0000] {base.py:84} INFO - Using connection ID 'my_postgres_conn' for task execution.
[2024-04-22T10:05:23.953+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-04-22T10:05:23.953+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/etl.py", line 81, in _create_tables
    cur.execute(query)
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 4:         VALUES (%s, %s, %s, %s, %s, %s)
                        ^

[2024-04-22T10:05:23.961+0000] {taskinstance.py:1205} INFO - Marking task as FAILED. dag_id=etl, task_id=create_table, execution_date=20240422T100521, start_date=20240422T100523, end_date=20240422T100523
[2024-04-22T10:05:23.973+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 21 for task create_table (syntax error at or near "%"
LINE 4:         VALUES (%s, %s, %s, %s, %s, %s)
                        ^
; 16513)
[2024-04-22T10:05:24.006+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-04-22T10:05:24.023+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-22T10:05:24.030+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
